Fixed layout bug in extend data dialog box.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@539 7d457c2a-affb-35e4-300a-418c747d4874

--- a/src/main/webapp/styles/dialogs/extend-data-preview-dialog.css
+++ b/src/main/webapp/styles/dialogs/extend-data-preview-dialog.css
@@ -2,7 +2,7 @@
     border: 1px solid #aaa;
     padding: 5px;
     overflow: auto;
-    height: 100%;
+    height: 400px;
 }
 
 .extend-data-preview-dialog .suggested-property {
@@ -18,7 +18,6 @@
 .extend-data-preview-dialog .preview-container {
     border: 1px solid #aaa;
     overflow: auto;
-    height: 100%;
 }
 
 .extend-data-preview-dialog .preview-container table {
